--- a/index.html
+++ b/index.html
@@ -1,22 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Hipster css</title>
+    <link href="https://fonts.googleapis.com/css2?family=Jost&family=Kalam&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9df1d813f0.js" crossorigin="anonymous"></script>
+    <title>Sandy Tartari</title>
+    <link rel="icon" href="img/undraw_reading_0re1.svg">
 </head>
+
 <body>
     <header>
         <nav class="menu">
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#portfolio">Portfólio</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
         </nav>
-        <h1 class="site-title">Sandy Tartari</h1>
-        <h2 class="site-subtitle">jr. developer</h2>
+        <div id="sobre">
+            <h1 class="site-title">Sandy Tartari</h1>
+            <h2  class="site-subtitle"> Beginner web developer</h2>
+        </div>
     </header>
+    <section class="portfolio" id="portfolio">
+        <h2>Portfólio</h2>
+        <div class="grid">
+            <figure>
+               <a href="https://www.instagram.com/mimosopantera/" target="_blank"> 
+                    <img class="img-portfolio" src="./img/undraw_friends_r511.svg" alt="gato">
+                    <figcaption>Meus gatos</figcaption>
+               </a>
+            </figure>
+            <figure>
+                <a href="https://www.skoob.com.br/usuario/3995361-sandy" target="_blank">  
+                    <img class="img-portfolio" src="./img/undraw_reading_time_gvg0.svg" alt="garota sentada lendo">
+                    <figcaption>Livros lidos</figcaption>
+                </a>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/undraw_Devices_e67q (1).svg" alt="Web design">
+                <figcaption>Web design</figcaption>
+            </figure>
+            <figure>
+                <img class="img-portfolio" src="./img/undraw_my_documents_ym8x.svg" alt="Projetos pessoais">
+                <figcaption>Projetos pessoais</figcaption>
+            </figure>
+        </div>	
+    </section>
+    		
+	</section>
+    <section class="contato" id="contato">
+        <div class="grid icons">
+            <h2>Contato</h2>
+            <a target="_blank" href="https://github.com/sandy-tartari">
+                <i class="fab fa-github"></i>
+            </a>
+            <a target="_blank" href="https://twitter.com/san_tartaruga">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a target="_blank" href="">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a target="_blank" href="https://www.instagram.com/san_tartaruga/">
+                <i class="fab fa-instagram"></i>
+            </a>  
+        </div>
+    </section>
 </body>
+
 </html>
